--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,8 +1,26 @@
-.content {
+.aboutMeContainer {
   opacity: 0;
-  margin-top: 10%;
+  display: flex;
+  margin: 15vmin auto;
+  justify-content: center;
+  animation: animateContainer linear forwards;
+  animation-timeline: view();
+  animation-range: entry;
+}
+
+.content {
+  width: 90%;
+  padding: 20px;
+  border: 2px solid var(--orangeCard);
+  border-radius: 15px;
+  box-shadow: 0 0 20px var(--boxShadow);
+  display: flex;
+  flex-direction: row;
+  gap: 5vmin;
+  justify-content: center;
+  opacity: 0;
   transform: translateY(20px);
-  transition: opacity 1s, transform 1.5s;
+  transition: opacity 1.5s, transform 1.5s;
 }
 
 .content.animate-in {
@@ -15,75 +33,29 @@
   transform: translateY(-50px);
 }
 
-.scramble-char {
-  display: inline-block;
-  opacity: 0;
-  animation: scrambleIn 1.5s forwards;
+.title {
+  font-weight: bold;
+  font-size: 3rem;
 }
 
-@keyframes scrambleIn {
-  0% {
-    opacity: 0;
-    transform: translateY(30px);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.title.dark {
+  color: white;
 }
 
-.content.animate-out .scramble-char {
-  animation: floatOut 1.5s forwards;
+.title {
+  color: var(--black);
 }
 
-@keyframes floatOut {
-  0% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-  100% {
-    opacity: 0;
-    transform: translateY(-50px);
-  }
+.text {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
 
-.aboutMeContainer {
-  opacity: 0;
-  display: flex;
-  margin-bottom: 5vmin;
-  justify-content: center;
-  animation: animateContainer linear forwards;
-  animation-timeline: view();
-  animation-range: entry;
-}
-
-.content{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.left{
-  display: flex;
-  flex: 30%;
-  max-width: fit-content;
-  flex-direction: column;
-}
-
-.left p{
+.highlight {
   color: var(--orange);
+  font-weight: bold;
 }
-
-.left .image{
-  display: flex;
-  justify-content: center;
-}
-
-.right{
-  flex: 70%;
-  padding-top: 6vmin;
-  margin: 0 5vmin;
-}
-
 
 @keyframes animateContainer {
   to {
@@ -92,11 +64,27 @@
   }
 }
 
-
 @media screen and (max-width: 768px) {
-  .left p{
+  .content {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .left {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .right {
+    padding-top: 3vmin;
+  }
+
+  .left p {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    width: 100%;;
+    width: 100%;
   }
 }
