--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -77,6 +77,11 @@ a{
   .cards > * {
     position: static;
   }
+
+  .iframe-responsive {
+    height: fit-content;
+    width: fit-content;
+  }
 }
 @media screen and (min-width: 769px) and (max-width: 1460px) {
   .services {
@@ -84,7 +89,7 @@ a{
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 3rem;
     height: 76rem; /* Adjust height as needed */
-    padding: 0;
+    padding: 0 0;
   }
 
   .cards {
@@ -107,11 +112,4 @@ a{
   padding: 18px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 768px) {
-  .iframe-responsive {
-    height: fit-content;
-    width: fit-content;
-  }
 }
