--- a/src/components/TabLayout/Achievements/AchievementCard.css
+++ b/src/components/TabLayout/Achievements/AchievementCard.css
@@ -6,7 +6,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
   background-color: #fff;
-  height: max-content; /* Adjust the height as per your design */
+  height: max-content;
   margin-bottom: 20px;
 }
 
