--- a/src/components/TabLayout/Projects/ProjectCard.css
+++ b/src/components/TabLayout/Projects/ProjectCard.css
@@ -56,7 +56,7 @@
     bottom: -30%;
     height: 100%;
     width: 100%;
-    color: var(--orange);
+    color: white;
     z-index: 4;
     cursor: pointer;
     transition: transform 0.25s ease-in-out; /* Quick transition for scaling */
@@ -134,7 +134,7 @@
     display: block; /* Ensure arrow icon is visible */
     position: relative; /* Reset position for mobile */
     text-align: center;
-    color: var(--orange);
+    color: white;
     width: 100%;
     bottom: -30%;
     background-color: transparent;
